refactor: ajustes dos artigos

--- a/index.html
+++ b/index.html
@@ -68,46 +68,12 @@
 
             <div class="artigos-relacionados-container">
 
-               <a href="pages/projeto_que_brilhou.html">
+               <a href="pages/artigo_projeto.html">
                     <div class="artigo-relacionado-item">
-                        <img src="img/sobre_parceria.png" alt="Imagem artigo 1" class="artigo-relacionado-img">
+                        <img src="img/bolsistas_na_etepac.jpg" alt="Bolsistas na etepac" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
                             <span class="artigo-relacionado-tag">Projeto</span>
                             <h3 class="artigo-relacionado-subtitulo">O projeto que brilhou</h3>
-                            <div class="artigo-relacionado-info">
-                            <span>24/10/2025</span>
-                            <span><i class="bi bi-stopwatch"></i> 5 minutos de leitura</span>
-                            </div>
-                        </div>
-                        <div class="artigo-relacionado-box-button">
-                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="pages/parceria_etepac_compaz.html">
-                    <div class="artigo-relacionado-item">
-                        <img src="img/sobre_parceria.png" alt="Imagem artigo 2" class="artigo-relacionado-img">
-                        <div class="artigo-relacionado-conteudo">
-                            <span class="artigo-relacionado-tag">Parceria</span>
-                            <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: união estratégica e eficaz</h3>
-                            <div class="artigo-relacionado-info">
-                            <span>24/10/2025</span>
-                            <span><i class="bi bi-stopwatch"></i> 6 minutos de leitura</span>
-                            </div>
-                        </div>
-                        <div class="artigo-relacionado-box-button">
-                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="pages/impacto_e_inovação.html">
-                    <div class="artigo-relacionado-item">
-                        <img src="img/sobre_parceria.png" alt="Imagem artigo 3" class="artigo-relacionado-img">
-                        <div class="artigo-relacionado-conteudo">
-                            <span class="artigo-relacionado-tag">Bolsistas</span>
-                            <h3 class="artigo-relacionado-subtitulo">Impacto e inovação: a força interdisciplinar dos bolsistas</h3>
                             <div class="artigo-relacionado-info">
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
@@ -118,10 +84,44 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="pages/artigo_parceria.html">
+                    <div class="artigo-relacionado-item">
+                        <img src="img/etepac_e_compaz.jpeg" alt="ETEPAC e COMPAZ unidos" class="artigo-relacionado-img">
+                        <div class="artigo-relacionado-conteudo">
+                            <span class="artigo-relacionado-tag">Parceria</span>
+                            <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: uma união estratégica e eficaz</h3>
+                            <div class="artigo-relacionado-info">
+                            <span>24/10/2025</span>
+                            <span><i class="bi bi-stopwatch"></i> 2 minutos de leitura</span>
+                            </div>
+                        </div>
+                        <div class="artigo-relacionado-box-button">
+                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="pages/artigo_bolsistas.html">
+                    <div class="artigo-relacionado-item">
+                        <img src="img/bolsistas_reunidos.jpg" alt="Bolsistas interdisciplinares em atuação" class="artigo-relacionado-img">
+                        <div class="artigo-relacionado-conteudo">
+                            <span class="artigo-relacionado-tag">Bolsistas</span>
+                            <h3 class="artigo-relacionado-subtitulo">Impacto e inovação: a força interdisciplinar dos bolsistas</h3>
+                            <div class="artigo-relacionado-info">
+                            <span>24/10/2025</span>
+                            <span><i class="bi bi-stopwatch"></i> 2 minutos de leitura</span>
+                            </div>
+                        </div>
+                        <div class="artigo-relacionado-box-button">
+                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
 
-        <section class="containers container" id="projeto">
+        <section class="containers conteudos-projeto" id="projeto">
             <div class="background-box">
                 
                 <div class="left-box">
