--- a/pages/artigo_bolsistas.html
+++ b/pages/artigo_bolsistas.html
@@ -11,5 +11,50 @@
         <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
         <img src="../img/logo_site_branca.png" alt="">
     </header>
+
+    <main class="artigo-principal-section">
+
+        <div class="artigo-principal-cabecalho">
+            
+            <h1 class="artigo-principal-titulo">
+            Impacto e inovação: A força interdisciplinar dos bolsistas do projeto
+            </h1>
+
+            <p class="artigo-principal-subtitulo">
+            Com nove bolsistas e uma comunidade com <strong>múltiplas áreas</strong>, <strong>múltiplas histórias</strong> e um único propósito: <strong>transformar pelo conhecimento.</strong> Construímos juntos, um ambiente de inovação e inclusão.
+            </p>
+
+            <div class="artigo-principal-info">
+                <span>Atualizado em: <strong>15 de novembro de 2025</strong></span>
+                <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>2 minutos</strong></span>
+                <span>Escrito por: <strong>Sônia Pádua</strong></span>
+            </div>
+            <img src="../img/bolsistas_atuando.jpeg" alt="Bolsistas do projeto em atividade no COMPAZ" class="artigo-principal-imagem">
+        </div>
+
+        <div class="artigo-principal-corpo">
+
+            <p>
+            O foco principal do projeto desenvolvido no COMPAZ foi a promoção do conhecimento como instrumento de transformação social e o desenvolvimento de habilidades profissionais com aplicabilidade na prática estruturada pela teoria. Durante as ações, foram abordados conteúdos programáticos voltados ao letramento digital, a internet das coisas, a inteligência artificial e a valorização das competências técnicas e comportamentais. Foram aplicadas diversas dinâmicas interativas que estimularam o trabalho em equipe, a comunicação e a reflexão sobre os desafios das ferramentas digitais tornando o aprendizado mais dinâmico e participativo.
+            </p>
+            <h2>Equipe de bolsistas</h2>
+            <p>
+            O projeto contou com a participação e cooperação de <strong>nove</strong> bolsistas (Andryene, Carlos Henrique, Glébson, Jaquelyne, Júlio, Leonardo, Rayane, Ruth e Valmir) de cursos distintos: <em>Administração</em>, <em>Design Gráfico</em>, <em>Logística</em>, <em>Tradução e Interpretação de Libras</em> e <em>Desenvolvimento de Sistemas</em>. Essa diversidade de formações enriqueceu o processo, permitindo a pluralidade de conhecimento, troca de saberes e experiências, o que resultou em ações interdisciplinares relevantes aplicáveis ao que foi proposto pelo projeto.
+            </p>
+
+            <h2>Participação e desafios</h2>
+            <img src="../img/participantes_interagindo.jpeg" alt="Participantes interagindo nas oficinas" class="artigo-principal-imagem" style="width:80%">
+            <p>
+            A receptividade positiva do COMPAZ foi um diferencial extremamente importante para o bom desenvolvimento das ações e atividades, bem como do desempenho dos bolsistas. Foi notório que o público participante demonstrou interesse e se envolveu nas atividades, participando com entusiasmo, curiosidade e partilha dos seus conhecimentos prévios e vivências do cotidiano. <strong>Os alunos acolheram o projeto com respeito e disposição para aprender,</strong> o que contribuiu para um ambiente de aprendizado colaborativo e inspirador.
+            </p>
+            <p>
+                Durante o desenvolvimento das atividades, foi necessário superar alguns desafios que surgiram, o que requereu a adaptação dos conteúdos à realidade dos participantes, de acordo com cada especificidade e peculiaridade de cada turma, fruto do engajamento e sensibilidade dos bolsistas em perceber as necessidades dos alunos e seus níveis de aprendizagem. <strong>Desafios que foram superados com paciência, uso de estratégias e ferramentas pedagógicas adequadas</strong> num conjunto de metodologias criativas.
+            </p>
+            <img src="../img/dinamicas.jpeg" alt="Dinâmicas e atividades durante o projeto" class="artigo-principal-imagem" style="width:60%">
+            <p>
+            Entre os pontos fortes do projeto e a aplicação no curso de extensão, destacam-se a integração entre a teoria e a prática com ênfase na transmissão de informações das literaturas e da realidade do indivíduo em ambiente coletivo e comunitário com a troca de conhecimentos entre bolsistas e comunidade. A experiência permitiu que todos crescessem pessoal e profissionalmente, compreendendo o verdadeiro valor da educação como ferramenta de inclusão e transformação social.
+            </p>
+        </div>
+    </main>
 </body>
 </html>
