--- a/pages/artigo_parceria.html
+++ b/pages/artigo_parceria.html
@@ -11,5 +11,56 @@
         <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
         <img src="../img/logo_site_branca.png" alt="">
     </header>
+
+    <main class="artigo-principal-section">
+
+        <div class="artigo-principal-cabecalho">
+            
+            <h1 class="artigo-principal-titulo">
+            ETEPAC e COMPAZ: uma união estratégia e eficaz
+            </h1>
+
+            <p class="artigo-principal-subtitulo">
+            Uma colaboração que uniu conhecimento, empatia e tecnologia, mostrando como a educação técnica pode transformar comunidades inteiras quando aliada à força da cidadania e do serviço público.
+            </p>
+
+            <div class="artigo-principal-info">
+                <span>Atualizado em: <strong>15 de novembro de 2025</strong></span>
+                <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>2 minutos</strong></span>
+                <span>Escrito por: <strong>Sônia Pádua</strong></span>
+            </div>
+        </div>
+
+        <div class="artigo-principal-corpo">
+            <img src="../img/etepac_e_compaz.jpeg" alt="ETEPAC e COMPAZ unidos" class="artigo-principal-imagem">
+            <p>
+            A parceria entre a ETEPAC e o COMPAZ foi fundamental para a efetivação do projeto. A união dessas duas instituições, ambas com forte compromisso social e foco na educação, criou o cenário ideal para ações de impacto e levou a tecnologia para onde ela é mais necessária: o coração das comunidades. Foi essa convergência de propósitos de formar cidadãos, ampliar oportunidades e fortalecer a comunidade, que tornou possível desenvolver atividades que realmente alcançaram e beneficiaram jovens e adultos.
+            </p>
+
+            <h2>A ETEPAC</h2>
+            <p>
+            A Escola Técnica Antônio Carlos Gomes da Costa (ETEPAC), integrante da rede estadual de Pernambuco, oferece 11 cursos técnicos nas mais diversas áreas, entre eles: Administração, Biblioteconomia, Design Gráfico, Design de Interiores, Desenvolvimento de Sistemas, Logística, Multimídia, Recursos Humanos, Secretaria Escolar, Segurança do Trabalho e Tradução e Interpretação de LIBRAS, todos na modalidade de Educação à Distância. Além de atender às demandas contemporâneas da educação, a ETEPAC atua como um polo de inovação e acesso ao conhecimento. A instituição se destaca por promover um ambiente dinâmico de ensino-aprendizagem, no qual estudantes podem expandir habilidades, desenvolver competências profissionais e explorar novas oportunidades por meio de formações regulares e articuladas.
+            </p>
+            <p>
+            A metodologia adotada pela ETEPAC tem como base a inovação e o aprendizado prático. O foco no desenvolvimento por projetos onde os estudantes desenvolvem habilidades técnicas e profissionais enfretando desafios reais, simulam desafios e conectem teoria à prática de forma concreta. Esse modelo torna a formação mais significativa, amplia o repertório técnico e estimula a autonomia do aluno, tornando a formação mais dinâmica e alinhada às demandas do mercado de trabalho.
+            </p>
+
+            <h2>O Compaz</h2>
+            <p>
+            O COMPAZ (Centro Comunitário da Paz), equipamento público reconhecido por promover cultura de paz e inclusão, desempenha papel essencial na vida comunitária do Recife, é símbolo de transformação social e convivência comunitária. Com seis unidades espalhadas pela cidade (Miguel Arraes, Eduardo Campos, Ariano Suassuna, Dom Helder, Leda Alves e Marcos Freire), oferece atividades educacionais, esportivas, culturais, sociais e de lazer em um ambiente acolhedor e inclusivo, que fortalecem a convivência e abrem portas para novas oportunidades. Neste projeto, a atuação se concentrou no COMPAZ Miguel Arraes, especialmente entre os usuários da Biblioteca Júlio Santiago, um espaço que se destaca pelo acolhimento e pela promoção do conhecimento.
+            </p>
+
+            <h2>Legado e Continuidade</h2>
+            <p>
+            Esta colaboração entre as duas instituições evidenciou a relevância da aplicação de ferramentas digitais no processo de aprendizagem de jovens e adultos da comunidade. A ação conjunta possibilitou não apenas o acesso à inclusão digital, mas também a constante revitalização do conhecimento adquirido, mostrando como experiências educativas bem estruturadas podem transformar realidades e fortalecer trajetórias pessoais e profissionais.
+            </p>
+            <img src="../img/encerramento_de_projeto.jpeg" alt="Encerramento do projeto" class="artigo-principal-imagem">
+            <p>
+            A parceria entre a <strong>ETEPAC</strong> e o <strong>COMPAZ</strong> deixou um legado duradouro, essa união inspira novas ações de extensão, reforçando a importância da colaboração entre instituições educacionais e espaços públicos.
+            </p>
+
+        </div>
+    </main>    
+
 </body>
 </html>
