--- a/pages/artigo_projeto.html
+++ b/pages/artigo_projeto.html
@@ -11,5 +11,56 @@
         <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
         <img src="../img/logo_site_branca.png" alt="">
     </header>
+
+    <main class="artigo-principal-section">
+
+        <div class="artigo-principal-cabecalho">
+            
+            <h1 class="artigo-principal-titulo">
+            O projeto que brilhou
+            </h1>
+
+            <p class="artigo-principal-subtitulo">
+            Uma experiência de impacto social, colaboração interdisciplinar e transformação comunitária. Como uma ação educativa <strong>uniu estudantes e comunidade</strong> em uma experiência transformadora.
+            </p>
+
+            <div class="artigo-principal-info">
+                <span>Atualizado em: <strong>15 de novembro de 2025</strong></span>
+                <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>3 minutos</strong></span>
+                <span>Escrito por: <strong>Sônia Pádua</strong></span>
+            </div>
+
+            <img src="../img/bolsistas_atividade.jpeg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+        </div>
+
+        <div class="artigo-principal-corpo">
+            <h2>O projeto Inclusão Digital como Ferramenta de Transformação Social</h2>
+            <p>
+            O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da modalidade EAD dos cursos de Administração, Design Gráfico, Logística, Tradução e Interpretação de Libras e Desenvolvimento de Sistemas da Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC), foi implementado como ação de extensão para os usuários da Biblioteca Júlio Santiago, localizada no COMPAZ Miguel Arraes, que foi criada pela Prefeitura do Recife e é uma iniciativa de primordial importância para a comunidade e foi um parceiro fundamental na execução desta iniciativa.
+            </p>
+            <p>
+            Voltado para jovens e adultos da comunidade local, o projeto teve como propósito promover a inclusão digital e ampliar o domínio de habilidades tecnológicas essenciais nos contextos educacional, profissional e cotidiano. Em uma região marcada por desafios sociais, a oferta desse tipo de formação representa uma oportunidade concreta de acesso, autonomia e inserção no mundo digital.
+            </p>
+
+            <h2>Interdisciplinaridade e Aprendizagem Mútua</h2>
+            <p>
+            A construção do projeto foi marcada pela interdisciplinaridade e pela diversidade da equipe envolvida. A seleção dos bolsistas resultou em um grupo composto por nove estudantes de cinco áreas distintas, que atuaram de forma integrada com o mesmo objetivo.
+            Essa pluralidade trouxe riqueza ao processo de ensino, permitindo que diferentes visões, competências e experiências fossem compartilhadas entre os alunos que receberam o treinamento.
+            </p>
+            <p>
+            A troca com os alunos das oficinas também ampliou significativamente o alcance pedagógico do projeto, tornando o aprendizado mais dinâmico, contextualizado e significativo, ampliando o impacto social do projeto.
+            </p>
+            <p>
+            Ao final do ciclo, observou-se um desenvolvimento evidente tanto dos bolsistas quanto dos participantes do curso: todos aprimoraram habilidades e competências, fortaleceram a confiança no uso de ferramentas digitais e vivenciaram um ambiente de aprendizagem colaborativa e inclusiva.
+            </p>
+
+            <h2>Novos Horizontes e Perspectivas para o Futuro</h2>
+            <p>
+            Em suma, o trabalho desse projeto, com a participação dos estudantes da ETEPAC, abrirá novos horizontes para os alunos atendidos, oferecendo conhecimentos que poderão ser aplicados no mercado de trabalho, em atividades acadêmicas e no uso cotidiano da tecnologia, pois receberam não só o básico da inclusão digital, mas perpassaram por uma trilha que contempla o uso de inteligência artificial, internet das coisas (IoT), segurança digital, produtividade em nuvem e outras competências essenciais no cenário tecnológico atual. Assim, o projeto não apenas capacitou indivíduos, mas incentivou autonomia, ampliou perspectivas e contribuiu para reduzir a distância entre a comunidade e as novas tecnologias.
+            </p>
+
+        </div>
+    </main>
+
 </body>
 </html>
