refactor: melhorias nos textos dos artigos parceria e projeto

--- a/pages/artigo_parceria.html
+++ b/pages/artigo_parceria.html
@@ -39,15 +39,31 @@
 
             <h2>A ETEPAC</h2>
             <p>
-            A Escola Técnica Antônio Carlos Gomes da Costa (ETEPAC), integrante da rede estadual de Pernambuco, oferece 11 cursos técnicos nas mais diversas áreas, entre eles: Administração, Biblioteconomia, Design Gráfico, Design de Interiores, Desenvolvimento de Sistemas, Logística, Multimídia, Recursos Humanos, Secretaria Escolar, Segurança do Trabalho e Tradução e Interpretação de LIBRAS, todos na modalidade de Educação à Distância. Além de atender às demandas contemporâneas da educação, a ETEPAC atua como um polo de inovação e acesso ao conhecimento. A instituição se destaca por promover um ambiente dinâmico de ensino-aprendizagem, no qual estudantes podem expandir habilidades, desenvolver competências profissionais e explorar novas oportunidades por meio de formações regulares e articuladas.
+            A Escola Técnica Antônio Carlos Gomes da Costa (ETEPAC), integrante da rede estadual de Pernambuco, oferece <strong>11 cursos técnicos</strong> nas mais diversas áreas, todos na modalidade de <strong>Educação à Distância</strong>, entre eles:
+            </p>
+            <ul class="topicos check">
+                <li>Administração</li>
+                <li>Biblioteconomia</li>
+                <li>Desenvolvimento de Sistemas</li>
+                <li>Design de Interiores</li>
+                <li>Design Gráfico</li>
+                <li>Logística</li>
+                <li>Multimídia</li>
+                <li>Recursos Humanos</li>
+                <li>Secretaria Escolar</li>
+                <li>Segurança do Trabalho</li>
+                <li>Tradução e Interpretação de LIBRAS</li>
+            </ul>
+            <p>
+            Além de atender às demandas contemporâneas da educação, a ETEPAC atua como um polo de inovação e acesso ao conhecimento. A instituição se destaca por promover um ambiente dinâmico de ensino-aprendizagem, no qual estudantes podem expandir habilidades, desenvolver competências profissionais e explorar novas oportunidades por meio de formações regulares e articuladas.
             </p>
             <p>
-            A metodologia adotada pela ETEPAC tem como base a inovação e o aprendizado prático. O foco no desenvolvimento por projetos onde os estudantes desenvolvem habilidades técnicas e profissionais enfretando desafios reais, simulam desafios e conectem teoria à prática de forma concreta. Esse modelo torna a formação mais significativa, amplia o repertório técnico e estimula a autonomia do aluno, tornando a formação mais dinâmica e alinhada às demandas do mercado de trabalho.
+            A metodologia adotada pela ETEPAC tem como base a inovação e o aprendizado prático. O foco no desenvolvimento por projetos onde os estudantes desenvolvem habilidades técnicas e profissionais enfretando desafios reais e conectem teoria à prática de forma concreta. Esse modelo torna a formação mais significativa, amplia o repertório técnico e estimula a autonomia do aluno, tornando a formação mais dinâmica e alinhada às demandas do mercado de trabalho.
             </p>
 
             <h2>O Compaz</h2>
             <p>
-            O COMPAZ (Centro Comunitário da Paz), equipamento público reconhecido por promover cultura de paz e inclusão, desempenha papel essencial na vida comunitária do Recife, é símbolo de transformação social e convivência comunitária. Com seis unidades espalhadas pela cidade (Miguel Arraes, Eduardo Campos, Ariano Suassuna, Dom Helder, Leda Alves e Marcos Freire), oferece atividades educacionais, esportivas, culturais, sociais e de lazer em um ambiente acolhedor e inclusivo, que fortalecem a convivência e abrem portas para novas oportunidades. Neste projeto, a atuação se concentrou no COMPAZ Miguel Arraes, especialmente entre os usuários da Biblioteca Júlio Santiago, um espaço que se destaca pelo acolhimento e pela promoção do conhecimento.
+            O COMPAZ (Centro Comunitário da Paz), equipamento público reconhecido por promover cultura de paz e inclusão, desempenha papel essencial na vida comunitária do Recife, é símbolo de transformação social e convivência comunitária. Com <strong>seis unidades</strong> espalhadas pela cidade (Miguel Arraes, Eduardo Campos, Ariano Suassuna, Dom Helder, Leda Alves e Marcos Freire), <strong>oferece atividades educacionais, esportivas, culturais, sociais e de lazer</strong> em um ambiente acolhedor e inclusivo, que fortalecem a convivência e abrem portas para novas oportunidades. Neste projeto, a atuação se concentrou no <strong>COMPAZ Miguel Arraes</strong>, especialmente entre os usuários da Biblioteca Júlio Santiago, um espaço que se destaca pelo acolhimento e pela promoção do conhecimento.
             </p>
 
             <h2>Legado e Continuidade</h2>
