--- a/pages/artigo_projeto.html
+++ b/pages/artigo_projeto.html
@@ -30,7 +30,7 @@
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
 
-            <img src="../img/bolsistas_atividade.jpeg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+            <img src="../img/aula_no_compaz.jpg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
