correção de textos

--- a/pages/artigo_bolsistas.html
+++ b/pages/artigo_bolsistas.html
@@ -35,11 +35,11 @@
         <div class="artigo-principal-corpo">
 
             <p>
-            O foco principal do projeto desenvolvido no COMPAZ foi a promoção do conhecimento como instrumento de transformação social e o desenvolvimento de habilidades profissionais com aplicabilidade na prática estruturada pela teoria. Durante as ações, foram abordados conteúdos programáticos voltados ao letramento digital, a internet das coisas, a inteligência artificial e a valorização das competências técnicas e comportamentais. Foram aplicadas diversas dinâmicas interativas que estimularam o trabalho em equipe, a comunicação e a reflexão sobre os desafios das ferramentas digitais tornando o aprendizado mais dinâmico e participativo.
+            O foco principal do projeto desenvolvido no COMPAZ foi a promoção do conhecimento como instrumento de transformação social e o desenvolvimento de habilidades profissionais com aplicabilidade na prática estruturada pela teoria. Durante as ações, foram abordados conteúdos programáticos voltados ao letramento digital, internet das coisas, inteligência artificial e valorização das competências técnicas e comportamentais. Foram aplicadas diversas dinâmicas interativas que estimularam o trabalho em equipe, a comunicação e a reflexão sobre os desafios das ferramentas digitais, tornando o aprendizado mais dinâmico e participativo.
             </p>
             <h2>Equipe de bolsistas</h2>
             <p>
-            O projeto contou com a participação e cooperação de <strong>nove</strong> bolsistas (Andryene, Carlos Henrique, Glébson, Jaquelyne, Júlio, Leonardo, Rayane, Ruth e Valmir) de cursos distintos: <em>Administração</em>, <em>Design Gráfico</em>, <em>Logística</em>, <em>Tradução e Interpretação de Libras</em> e <em>Desenvolvimento de Sistemas</em>. Essa diversidade de formações enriqueceu o processo, permitindo a pluralidade de conhecimento, troca de saberes e experiências, o que resultou em ações interdisciplinares relevantes aplicáveis ao que foi proposto pelo projeto.
+            O projeto contou com a participação e cooperação de <strong>nove</strong> bolsistas (Andryene, Carlos Henrique, Glébson, Jaquelyne, Júlio, Leonardo, Rayane, Ruth e Valmir) de cursos distintos: <em>Administração</em>, <em>Design Gráfico</em>, <em>Logística</em>, <em>Tradução e Interpretação de LIBRAS</em> e <em>Desenvolvimento de Sistemas</em>. Essa diversidade de formações enriqueceu o processo, permitindo a pluralidade de conhecimento, troca de saberes e experiências, o que resultou em ações interdisciplinares relevantes aplicáveis ao que foi proposto pelo projeto.
             </p>
 
             <h2>Participação e desafios</h2>
