--- a/pages/artigo_parceria.html
+++ b/pages/artigo_parceria.html
@@ -58,21 +58,21 @@
             Além de atender às demandas contemporâneas da educação, a ETEPAC atua como um polo de inovação e acesso ao conhecimento. A instituição se destaca por promover um ambiente dinâmico de ensino-aprendizagem, no qual estudantes podem expandir habilidades, desenvolver competências profissionais e explorar novas oportunidades por meio de formações regulares e articuladas.
             </p>
             <p>
-            A metodologia adotada pela ETEPAC tem como base a inovação e o aprendizado prático. O foco no desenvolvimento por projetos onde os estudantes desenvolvem habilidades técnicas e profissionais enfretando desafios reais e conectem teoria à prática de forma concreta. Esse modelo torna a formação mais significativa, amplia o repertório técnico e estimula a autonomia do aluno, tornando a formação mais dinâmica e alinhada às demandas do mercado de trabalho.
+            A metodologia adotada pela ETEPAC tem como base a inovação e o aprendizado prático. O foco é o desenvolvimento de projetos onde os estudantes desenvolvam habilidades técnicas e profissionais enfrentando desafios reais e conectem teoria à prática de forma concreta. Esse modelo torna a formação mais significativa, amplia o repertório técnico e estimula a autonomia do aluno, tornando a formação mais dinâmica e alinhada às demandas do mercado de trabalho.
             </p>
 
-            <h2>O Compaz</h2>
+            <h2>O COMPAZ</h2>
             <p>
             O COMPAZ (Centro Comunitário da Paz), equipamento público reconhecido por promover cultura de paz e inclusão, desempenha papel essencial na vida comunitária do Recife, é símbolo de transformação social e convivência comunitária. Com <strong>seis unidades</strong> espalhadas pela cidade (Miguel Arraes, Eduardo Campos, Ariano Suassuna, Dom Helder, Leda Alves e Marcos Freire), <strong>oferece atividades educacionais, esportivas, culturais, sociais e de lazer</strong> em um ambiente acolhedor e inclusivo, que fortalecem a convivência e abrem portas para novas oportunidades. Neste projeto, a atuação se concentrou no <strong>COMPAZ Miguel Arraes</strong>, especialmente entre os usuários da Biblioteca Júlio Santiago, um espaço que se destaca pelo acolhimento e pela promoção do conhecimento.
             </p>
 
-            <h2>Legado e Continuidade</h2>
+            <h2>Legado e continuidade</h2>
             <p>
-            Esta colaboração entre as duas instituições evidenciou a relevância da aplicação de ferramentas digitais no processo de aprendizagem de jovens e adultos da comunidade. A ação conjunta possibilitou não apenas o acesso à inclusão digital, mas também a constante revitalização do conhecimento adquirido, mostrando como experiências educativas bem estruturadas podem transformar realidades e fortalecer trajetórias pessoais e profissionais.
+            Essa colaboração entre as duas instituições evidenciou a relevância da aplicação de ferramentas digitais no processo de aprendizagem de jovens e adultos da comunidade. A ação conjunta possibilitou não apenas o acesso à inclusão digital, mas também a constante revitalização do conhecimento adquirido, mostrando como experiências educativas bem estruturadas podem transformar realidades e fortalecer trajetórias pessoais e profissionais.
             </p>
             <img src="../img/encerramento_de_projeto.jpeg" alt="Encerramento do projeto" class="artigo-principal-imagem">
             <p>
-            A parceria entre a <strong>ETEPAC</strong> e o <strong>COMPAZ</strong> deixou um legado duradouro, essa união inspira novas ações de extensão, reforçando a importância da colaboração entre instituições educacionais e espaços públicos.
+            A parceria entre a <strong>ETEPAC</strong> e o <strong>COMPAZ</strong> deixou um legado duradouro. Essa união inspira novas ações de extensão, reforçando a importância da colaboração entre instituições educacionais e espaços públicos.
             </p>
 
         </div>
