--- a/pages/artigo_projeto.html
+++ b/pages/artigo_projeto.html
@@ -34,15 +34,15 @@
         </div>
 
         <div class="artigo-principal-corpo">
-            <h2>O projeto Inclusão Digital como Ferramenta de Transformação Social</h2>
+            <h2>O projeto Inclusão Digital como ferramenta de transformação social</h2>
             <p>
-            O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da modalidade EAD dos cursos de Administração, Design Gráfico, Logística, Tradução e Interpretação de Libras e Desenvolvimento de Sistemas da Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC), foi implementado como ação de extensão para os usuários da Biblioteca Júlio Santiago, localizada no COMPAZ Miguel Arraes, que foi criada pela Prefeitura do Recife e é uma iniciativa de primordial importância para a comunidade e foi um parceiro fundamental na execução desta iniciativa.
+            O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da modalidade EAD dos cursos de Administração, Design Gráfico, Logística, Tradução e Interpretação de LIBRAS e Desenvolvimento de Sistemas da Escola Técnica Professor Antônio Carlos Gomes da Costa (ETEPAC), foi implementado como ação de extensão para os usuários da Biblioteca Júlio Santiago, que funciona no COMPAZ Miguel Arraes, que é uma instituição criada pela Prefeitura do Recife de primordial importância para a comunidade e que foi um parceiro fundamental na execução desta iniciativa.
             </p>
             <p>
             Voltado para jovens e adultos da comunidade local, o projeto teve como propósito promover a inclusão digital e ampliar o domínio de habilidades tecnológicas essenciais nos contextos educacional, profissional e cotidiano. Em uma região marcada por desafios sociais, a oferta desse tipo de formação representa uma oportunidade concreta de acesso, autonomia e inserção no mundo digital.
             </p>
 
-            <h2>Interdisciplinaridade e Aprendizagem Mútua</h2>
+            <h2>Interdisciplinaridade e aprendizagem mútua</h2>
             <p>
             A construção do projeto foi marcada pela interdisciplinaridade e pela diversidade da equipe envolvida. A seleção dos bolsistas resultou em um grupo composto por nove estudantes de cinco áreas distintas, que atuaram de forma integrada com o mesmo objetivo.
             Essa pluralidade trouxe riqueza ao processo de ensino, permitindo que diferentes visões, competências e experiências fossem compartilhadas entre os alunos que receberam o treinamento.
@@ -54,9 +54,9 @@
             Ao final do ciclo, observou-se um desenvolvimento evidente tanto dos bolsistas quanto dos participantes do curso: todos aprimoraram habilidades e competências, fortaleceram a confiança no uso de ferramentas digitais e vivenciaram um ambiente de aprendizagem colaborativa e inclusiva.
             </p>
 
-            <h2>Novos Horizontes e Perspectivas para o Futuro</h2>
+            <h2>Novos horizontes e perspectivas para o futuro</h2>
             <p>
-            Em suma, o trabalho desse projeto, com a participação dos estudantes da ETEPAC, abrirá novos horizontes para os alunos atendidos, oferecendo conhecimentos que poderão ser aplicados no mercado de trabalho, em atividades acadêmicas e no uso cotidiano da tecnologia, pois receberam não só o básico da inclusão digital, mas perpassaram por uma trilha que contempla o uso de inteligência artificial, internet das coisas (IoT), segurança digital, produtividade em nuvem e outras competências essenciais no cenário tecnológico atual. Assim, o projeto não apenas capacitou indivíduos, mas incentivou autonomia, ampliou perspectivas e contribuiu para reduzir a distância entre a comunidade e as novas tecnologias.
+            Em suma, o trabalho desse projeto, com a participação dos estudantes da ETEPAC, abrirá novos horizontes para os alunos atendidos, oferecendo conhecimentos que poderão ser aplicados no mercado de trabalho, em atividades acadêmicas e no uso cotidiano da tecnologia, pois receberam não só o básico da inclusão digital, mas perpassaram por uma trilha que contempla o uso de Inteligência Artificial, Internet das Coisas (IoT), segurança digital, produtividade em nuvem e outras competências essenciais no cenário tecnológico atual. Assim, o projeto não apenas capacitou indivíduos, mas incentivou autonomia, ampliou perspectivas e contribuiu para reduzir a distância entre a comunidade e as novas tecnologias.
             </p>
 
         </div>
