--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -141,7 +141,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre bolsistas por curso" class="grafico">
+            <img src="../img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre público estudantil por gênero" class="grafico">
             </div>
 
             <p>
@@ -187,7 +187,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/distribuicao_pe.png" alt="Gráfico de barras sobre bolsistas por cidade">
+            <img src="../img/distribuicao_pe.png" alt="Distribuição dos bolsistas por cidade">
             </div>
 
             <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
@@ -228,11 +228,11 @@
             </div>
 
             <p>
-            A faixa etária dos participantes variou entre <strong>15 e 78 anos</strong>, abrangendo desde adolescentes até idosos. A frequência média de participação foi de 82,86%, <strong>demonstrando um bom engajamento geral</strong>. O gráfico abaixo ilustra a distribuição entre as faixas etárias, evidenciando a predominância de adolescente e idosos:
+            A faixa etária dos participantes variou entre <strong>15 e 78 anos</strong>, abrangendo desde adolescentes até idosos. A frequência média de participação foi de 82,86%, <strong>demonstrando um bom engajamento geral</strong>. O gráfico abaixo ilustra a distribuição entre as faixas etárias, evidenciando a predominância de adolescentes e idosos:
             </p>
 
             <div class="grafico">
-            <img src="../img/grafico_idade.png" alt="Gráfico de barras sobre alunos do COMPAZ por idade">
+            <img src="../img/grafico_idade.png" alt="Gráfico de pizza sobre alunos do COMPAZ por idade">
             </div>
             
             <h4>Participação e carga horária</h4>
@@ -320,7 +320,7 @@
                     <td class="subgroup">ANÁLISE DE DADOS</td>
                 </tr>
                 <tr>
-                    <td>Andryene de Mota Rodrigues</td>
+                    <td>Andryene da Mota Rodrigues</td>
                     <td>Rayane Mireli Silva Gomes</td>
                 </tr>
                 </tbody>
