feat: div box dos bolsistas

--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -30,6 +30,43 @@
         </div>
 
         <div class="artigo-principal-corpo">
+
+            <div class="box-bolsista">
+
+            </div>
+            
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
+            <div class="box-bolsista">
+
+            </div>
+
             <h2>Andryene Rodrigues</h2>
             <p>
             Graduanda em <strong>Administração</strong> pela Estácio. Possui formação técnica em <strong>Design de Interiores</strong> pela ETE Miguel Batista e cursou <strong>Gastronomia</strong> na UNINASSAU. Atua na área administrativa e de gestão, com experiência em Gestão de Risco, atendimento ao público e rotinas administrativas. Estudante do Curso <strong>Técnico em Administração</strong> pela ETEPAC.<br> No projeto, atuou como ministrante das aulas no COMPAZ e contribuiu para o desenvolvimento das atividades práticas, sendo também responsável pela <strong>idealização e criação do vídeo institucional</strong> do projeto.
