refactor: reestruturando os diretorios do projeto

--- a/pages/artigo_parceria.html
+++ b/pages/artigo_parceria.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
-        <img src="../img/logo_site_branca.png" alt="">
+        <img src="../utils/img/logo_site_branca.png" alt="">
     </header>
 
     <main class="artigo-principal-section">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="artigo-principal-corpo">
-            <img src="../img/etepac_e_compaz.jpeg" alt="ETEPAC e COMPAZ unidos" class="artigo-principal-imagem">
+            <img src="../utils/img/etepac_e_compaz.jpeg" alt="ETEPAC e COMPAZ unidos" class="artigo-principal-imagem">
             <p>
             A parceria entre a ETEPAC e o COMPAZ foi fundamental para a efetivação do projeto. A união dessas duas instituições, ambas com forte compromisso social e foco na educação, criou o cenário ideal para ações de impacto e levou a tecnologia para onde ela é mais necessária: o coração das comunidades. Foi essa convergência de propósitos de formar cidadãos, ampliar oportunidades e fortalecer a comunidade, que tornou possível desenvolver atividades que realmente alcançaram e beneficiaram jovens e adultos.
             </p>
@@ -70,7 +70,7 @@
             <p>
             Essa colaboração entre as duas instituições evidenciou a relevância da aplicação de ferramentas digitais no processo de aprendizagem de jovens e adultos da comunidade. A ação conjunta possibilitou não apenas o acesso à inclusão digital, mas também a constante revitalização do conhecimento adquirido, mostrando como experiências educativas bem estruturadas podem transformar realidades e fortalecer trajetórias pessoais e profissionais.
             </p>
-            <img src="../img/encerramento_de_projeto.jpeg" alt="Encerramento do projeto" class="artigo-principal-imagem">
+            <img src="../utils/img/encerramento_de_projeto.jpeg" alt="Encerramento do projeto" class="artigo-principal-imagem">
             <p>
             A parceria entre a <strong>ETEPAC</strong> e o <strong>COMPAZ</strong> deixou um legado duradouro. Essa união inspira novas ações de extensão, reforçando a importância da colaboração entre instituições educacionais e espaços públicos.
             </p>
