--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="../index.html#projeto" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
-        <img src="../img/logo_site_branca.png" alt="">
+        <img src="../utils/img/logo_site_branca.png" alt="">
     </header>
 
     <main class="artigo-principal-section">
@@ -30,7 +30,7 @@
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
 
-            <img src="../img/sobre_parceria.png" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+            <img src="../utils/img/sobre_parceria.png" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
@@ -141,7 +141,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre público estudantil por gênero" class="grafico">
+            <img src="../utils/img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre público estudantil por gênero" class="grafico">
             </div>
 
             <p>
@@ -187,7 +187,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/distribuicao_pe.png" alt="Distribuição dos bolsistas por cidade">
+            <img src="../utils/img/distribuicao_pe.png" alt="Distribuição dos bolsistas por cidade">
             </div>
 
             <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
@@ -224,7 +224,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/grafico_genero_alunos.png" alt="Gráfico de pizza sobre alunos do COMPAZ por gênero">
+            <img src="../utils/img/grafico_genero_alunos.png" alt="Gráfico de pizza sobre alunos do COMPAZ por gênero">
             </div>
 
             <p>
@@ -232,7 +232,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../img/grafico_idade.png" alt="Gráfico de pizza sobre alunos do COMPAZ por idade">
+            <img src="../utils/img/grafico_idade.png" alt="Gráfico de pizza sobre alunos do COMPAZ por idade">
             </div>
             
             <h4>Participação e carga horária</h4>
