--- a/pages/imagens_salvas.html
+++ b/pages/imagens_salvas.html
@@ -12,15 +12,15 @@
       <i class="bi bi-caret-left-fill"></i>
       <p>voltar</p>
     </a>
-    <img src="../img/logo_site_branca.png" alt="Logo Inclusão Digital">
+    <img src="../utils/img/logo_site_branca.png" alt="Logo Inclusão Digital">
   </header>
 
   <main class="artigo-principal-section">
 
  
     <div class="artigo-principal-corpo">
-      <img src="../img/compaz_equipamento.jpeg" alt="Interior do COMPAZ durante o projeto" class="artigo-principal-imagem" style="width:80%">
-      <img src="../img/participantes_do_curso.png" alt="Participantes do curso de inclusão digital" class="artigo-principal-imagem">
+      <img src="../utils/img/compaz_equipamento.jpeg" alt="Interior do COMPAZ durante o projeto" class="artigo-principal-imagem" style="width:80%">
+      <img src="../utils/img/participantes_do_curso.png" alt="Participantes do curso de inclusão digital" class="artigo-principal-imagem">
 
     </div>
   </main>
