--- a/pages/artigo_projeto.html
+++ b/pages/artigo_projeto.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
-        <img src="../img/logo_site_branca.png" alt="">
+        <img src="../utils/img/logo_site_branca.png" alt="">
     </header>
 
     <main class="artigo-principal-section">
@@ -30,7 +30,7 @@
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
 
-            <img src="../img/aula_no_compaz.jpg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+            <img src="../utils/img/aula_no_compaz.jpg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
