--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -121,5 +121,18 @@
 
     <script src="../utils/scripts/animated.js"></script>    
     
+    <!-- Plugin VLibras -->
+    <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+    
 </body>
+</html>
 </html>
