--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                     </p>
 
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/sonia-p%C3%A1dua-71400134/" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
-                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais"><i class="bi bi-postcard"></i></a>
+                        <a href="https://www.linkedin.com/in/sonia-p%C3%A1dua-71400134/" target="_blank" class="btn-sociais" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais" title="Currículo Lattes"><i class="bi bi-postcard"></i></a>
                     </div>
                 </div>
                 <img src="utils/img/sonia.png" alt="" class="professor-img"/>
@@ -190,11 +190,11 @@
                         Professor <span>Voluntário</span> neste projeto, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.
                     </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank" class="btn-sociais" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
 
-                        <a href="https://github.com/FagnerPontes" target="_blank" class="btn-sociais"><i class="bi bi-github"></i></a>
+                        <a href="https://github.com/FagnerPontes" target="_blank" class="btn-sociais" title="GitHub"><i class="bi bi-github"></i></a>
 
-                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais"><i class="bi bi-postcard"></i></a>
+                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais" title="Currículo Lattes"><i class="bi bi-postcard"></i></a>
                     </div>
                 </div>
                 <img src="utils/img/fagner.png" alt="" class="professor-img"/>                
@@ -378,9 +378,9 @@
             <div class="footer-column">
                 <h3>Siga o Inclusão Digital:</h3>
                 <div class="buttons-footer">    
-                    <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/compazdigital/" target="_blank" class="btn-sociais" title="Instagram"><i class="bi bi-instagram"></i></a>
                     <a href="#" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://www.youtube.com/@compazdigital" target="_blank" class="btn-sociais"><i class="bi bi-youtube"></i></a>
+                    <a href="https://www.youtube.com/@compazdigital" target="_blank" class="btn-sociais" title="YouTube"><i class="bi bi-youtube"></i></a>
                 </div>
             </div>
 
